--- a/index.css
+++ b/index.css
@@ -10,6 +10,19 @@
     background:#212425;
 }
 
+@media screen and (min-width:450px)  {
+    .scrollteamg{grid-template-columns: repeat(2,minmax(0, 2fr));}
+    .tn{font-size:3rem;}
+    .tl{width:20rem;}}
+@media screen and (max-width:450px){
+    .tn{font-size:1.7rem;}
+    .tl{width:12rem;height:.2rem}
+    .teams{width:100%;}
+    .scrollteamg{width:17rem;;}}
+
+@media screen and (max-width:310px) {
+    .scrollteamg{width:100%;}}
+
 ::-webkit-scrollbar-thumb{
     background-color:#FF3131;
     border: 1px solid#141414;
