added animation to team generator

--- a/index.css
+++ b/index.css
@@ -10,6 +10,24 @@
     background:#212425;
 }
 
+.fade-enter {
+  opacity: 0.01;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.fade-leave {
+  opacity: 1;
+}
+
+.fade-leave.fade-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
+
 @media screen and (min-width:450px)  {
     .scrollteamg{grid-template-columns: repeat(2,minmax(0, 2fr));}
     .tn{font-size:3rem;}
